corpus/statements.txt
======================================================================
Simple
======================================================================
* a
* b
* c
* d

---
(source_file
  (headline (title))
  (headline (title))
  (headline (title))
  (headline (title)))

======================================================================
Nested_1
======================================================================
* a
* b
** b1
* c
* d

---
(source_file
  (headline (title))
  (headline (title)
    (headline (title)))
  (headline (title))
  (headline (title)))

======================================================================
Nested_2
======================================================================
* a
* b
** b1
** b2
* c
* d

---
(source_file
  (headline (title))
  (headline (title)
    (headline (title))
    (headline (title)))
  (headline (title))
  (headline (title)))

======================================================================
Nested_3
======================================================================
* a
* b
** b1
** b2
** b3
* c
* d

---
(source_file
  (headline (title))
  (headline (title)
    (headline (title))
    (headline (title))
    (headline (title)))
  (headline (title))
  (headline (title)))

======================================================================
Priority
======================================================================
* a
* TODO b
* c
* d

---
(source_file
  (headline (title))
  (headline (todo_keyword) (title))
  (headline (title))
  (headline (title)))
